--- a/styles/about.module.css
+++ b/styles/about.module.css
@@ -4,17 +4,32 @@
   grid-template-columns: 1fr 1fr;
   grid-template-rows: auto;
   grid-gap: 5rem;
-  margin: 0 0 10rem 0;
 }
 .atgTextBox h1 {
   font-size: 3.5rem;
   color: var(--white);
   font-weight: 500;
-  text-shadow: 2px 2px 0 var(--lightblue);
   margin: 0 0 2.5rem 0;
 }
+.parallexBoxesParent {
+  width: 100%;
+  position: relative;
+  z-index: 10;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: auto;
+  grid-gap: 7.5rem;
+}
+.parallexBoxesParent > h1 {
+  font-size: 3.75rem;
+  color: var(--white);
+  font-weight: 500;
+  text-align: center;
+  width: 100%;
+  margin: 0 0 5rem 0;
+}
 .atgTextBox p {
-  font-size: 1.75rem;
+  font-size: 2rem;
   color: var(--white);
   margin: 0 0 1rem 0;
 }
@@ -29,7 +44,7 @@
 }
 .profilexContainer {
   width: 100%;
-  padding: 2.5rem 5rem;
+  padding: 2.5rem 5rem 5rem 5rem;
   border-radius: 1rem;
   position: relative;
   overflow: hidden;
@@ -38,7 +53,7 @@
 }
 .profileCardGrid {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr;
   grid-template-rows: auto;
   grid-gap: 5rem;
   width: 100%;
@@ -47,7 +62,6 @@
   font-size: 3.5rem;
   color: var(--white);
   font-weight: 500;
-  text-shadow: 2px 2px 0 var(--lightblue);
   text-align: center;
   width: 100%;
   margin: 0 0 5rem 0;
@@ -98,6 +112,9 @@
   }
   .profilexContainer {
     padding: 1.5rem;
+  }
+  .parallexBoxesParent {
+    grid-gap: 1.5rem;
   }
   .atgTextBox h1 {
     font-size: 2.25rem;
