--- a/styles/components/footer.module.css
+++ b/styles/components/footer.module.css
@@ -22,7 +22,6 @@
   font-size: 2.75rem;
   color: var(--white);
   font-weight: 500;
-  text-shadow: 2px 2px 0 var(--lightblue);
   margin: 0 0 1.5rem 0;
 }
 .footerGridBox a {
@@ -61,7 +60,7 @@
   outline: 0;
   font-size: 1.5rem;
   background-color: rgba(255, 255, 255, 0.5);
-  padding: 1rem 1.5rem;
+  padding: 1.5rem 1.5rem;
   color: var(--black);
   border-radius: 0.5rem;
   transition: 0.5s;
@@ -97,7 +96,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: auto;
-    grid-gap: 5rem;
+    grid-gap: 1.5rem 5rem;
     width: 100%;
   }
   .footerGridBox:nth-child(3) {
