--- a/styles/components/header.module.css
+++ b/styles/components/header.module.css
@@ -48,7 +48,7 @@
   width: 100%;
 }
 .headerTextBox > * {
-  margin: 0 0 0 2.5rem;
+  margin: 0 0 0 2.5rem !important;
 }
 .headerTextBox a:hover {
   color: var(--pink) !important;
@@ -82,9 +82,10 @@
   color: var(--white);
   font-size: 2.5rem;
   display: none;
+  cursor: pointer;
 }
 .mobHeader {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   background: linear-gradient(
     var(--darkblue),
@@ -124,7 +125,7 @@
 }
 .dropBoxMob {
   width: 100%;
-  display: flex;
+  display: none;
   flex-direction: column;
   align-items: flex-start;
   background-color: rgba(0, 0, 0, 0.15);
@@ -135,9 +136,9 @@
 .dropBoxMob a:nth-child(1) {
   margin: 0 0 1.5rem 0;
 }
-.mobLinks button:focus-within > .dropBoxMob {
+/* .mobLinks button:focus-within > .dropBoxMob {
   display: flex;
-}
+} */
 @media screen and (max-width: 1000px) {
   .headerTextBox {
     display: none;
