--- a/styles/components/profileCard.module.css
+++ b/styles/components/profileCard.module.css
@@ -13,7 +13,7 @@
 .header {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   width: 100%;
 }
 .header img {
@@ -28,13 +28,11 @@
   font-size: 3rem;
   color: var(--white);
   font-weight: 500;
-  text-shadow: 2px 2px 0 var(--lightblue);
 }
 .header h6 {
   font-size: 1.65rem;
   color: var(--white);
   font-weight: 500;
-  text-shadow: 1px 1px 0 var(--lightblue);
 }
 .ProfileCard p {
   font-size: 1.65rem;
