--- a/styles/faq.module.css
+++ b/styles/faq.module.css
@@ -33,10 +33,9 @@
   margin: 0 auto;
 }
 .submitQuestionTextDetails h2 {
-  font-size: 2.5rem;
+  font-size: 3rem;
   color: var(--white);
   font-weight: 500;
-  text-shadow: 1px 1px 0 var(--pink);
   text-align: center;
   margin: 0;
 }
@@ -78,7 +77,7 @@
   border-radius: 1rem;
   position: relative;
   overflow: hidden;
-  margin: 0 auto 5rem auto;
+  margin: 0 auto 2.5rem auto;
   background: linear-gradient(
     45deg,
     rgba(254, 198, 198, 0.75),
@@ -88,21 +87,30 @@
 .faqHeading {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
   width: 100%;
-  margin: 0 0 2.5rem 0;
+  cursor: pointer;
 }
 .faqHeading h1 {
   font-size: 3.5rem;
   color: var(--white);
   font-weight: 500;
-  text-shadow: 2px 2px 0 var(--lightblue);
 }
 .faqHeading img {
   width: 3.5rem;
   height: 3.5rem;
   object-fit: contain;
   margin: 0 0 0 1.5rem;
+}
+.faqHeading span {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.faqHeading > svg {
+  font-size: 2.5rem;
+  color: var(--white);
+  transition: 0.75s;
 }
 .faqBox {
   width: 100%;
@@ -161,15 +169,23 @@
   .submitQuestionTextDetails {
     width: 100%;
   }
+  .submitQuestionTextDetails h2 {
+    font-size: 2.5rem;
+  }
   .faqSection {
     width: 100%;
     padding: 1.5rem;
     margin: 0 auto 2.5rem auto;
   }
   .faqHeading h1 {
-    font-size: 2.5rem;
+    font-size: 2.15rem;
   }
   .disclaimerP {
     width: 100%;
+    padding: 2.5rem 0;
+  }
+  .faqHeading img {
+    width: 2.5rem;
+    height: 2.5rem;
   }
 }
