--- a/styles/home.module.css
+++ b/styles/home.module.css
@@ -6,8 +6,8 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  margin: -7.5rem 0 0 0;
-  padding: 7.5rem 0 0 0;
+  margin: -7.5rem 0 0 0 !important;
+  padding: 7.5rem 0 0 0 !important;
 }
 .heroSection video {
   width: 100%;
@@ -34,8 +34,18 @@
   left: 50%;
   transform: translate(-50%, -50%);
   width: 90%;
-  text-shadow: 2px 2px 0 var(--lightblue);
   opacity: 0;
+}
+.heroContent h2 {
+  font-size: 5rem;
+  font-weight: 500;
+  color: var(--white);
+  text-align: center;
+  position: absolute;
+  top: 35%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 90%;
 }
 .explore {
   position: absolute;
@@ -51,7 +61,7 @@
   opacity: 0;
 }
 .explore svg {
-  font-size: 2.25rem;
+  font-size: 2.75rem;
   margin: 1rem 0 0 0;
   width: 4rem;
   height: 4rem;
@@ -64,8 +74,7 @@
   transition: 0.5s;
 }
 .explore svg:hover {
-  background: linear-gradient(to right, var(--pink), var(--darkblue));
-  border: 1px solid var(--pink);
+  background-color: var(--lightblue);
 }
 .joinMovement {
   width: 100%;
@@ -104,10 +113,9 @@
   margin: 5rem 0 0 0;
 }
 .joinMovementTextDetails h1 {
-  font-size: 3.5rem;
+  font-size: 3.75rem;
   color: var(--white);
   font-weight: 500;
-  text-shadow: 2px 2px 0 var(--lightblue);
   text-align: center;
 }
 .movementSeparator {
@@ -117,7 +125,7 @@
   margin: 5rem 0;
 }
 .joinMovementTextDetails p {
-  font-size: 1.75rem;
+  font-size: 2rem;
   color: var(--white);
   text-align: center;
 }
@@ -126,8 +134,11 @@
 }
 .parallexSection {
   width: 100%;
-  padding: 5rem 0;
+  padding: 7.5rem 0;
   position: relative;
+}
+.parallexSection.ps2 {
+  padding: 0;
 }
 .parallexSection > * {
   width: 100%;
@@ -147,26 +158,29 @@
   z-index: 10;
 }
 .parallexBoxesParent > h1 {
-  font-size: 3.5rem;
+  font-size: 3.75rem;
   color: var(--white);
   font-weight: 500;
-  text-shadow: 2px 2px 0 var(--lightblue);
   text-align: center;
   width: 100%;
   margin: 0 0 5rem 0;
 }
+.reviewDonateParent {
+  width: 100%;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: auto;
+  grid-gap: 5rem;
+  margin: 0 0 5rem 0;
+}
 .reviewsBanner {
-  width: 60%;
+  width: 75%;
   padding: 2.5rem;
+  margin: 0 auto;
   border-radius: 1rem;
   position: relative;
   overflow: hidden;
-
-  background: linear-gradient(
-    45deg,
-    rgba(254, 198, 198, 0.75),
-    rgba(109, 156, 203, 0.75)
-  );
+  background-color: rgba(255, 255, 255, 0.15);
 }
 .reviewBannerDetails {
   width: 100%;
@@ -175,17 +189,17 @@
   z-index: 15;
 }
 .reviewBannerDetails h1 {
-  font-size: 3.5rem;
+  font-size: 3.75rem;
   color: var(--white);
   font-weight: 500;
-  text-shadow: 2px 2px 0 var(--lightblue);
 }
 .reviewBannerDetails h1.sponsorsP {
-  font-size: 3.5rem;
+  font-size: 3.75rem;
   color: var(--darkblue);
   font-weight: 500;
-  text-shadow: 0 0 0 var(--lightblue);
   margin: 0;
+  width: 100%;
+  text-align: center;
 }
 .signupDetailsBox {
   display: none;
@@ -207,7 +221,7 @@
   border: 1px solid var(--light);
   padding: 3.5rem 1.5rem 1.5rem 1.5rem;
   border-radius: 1rem;
-  font-size: 1.75rem;
+  font-size: 2rem;
   color: var(--black);
   font-weight: 400;
 }
@@ -224,7 +238,7 @@
   align-items: center;
   justify-content: center;
   font-size: 1.75rem;
-  color: var(--pink);
+  color: var(--white);
   margin: 0 1.5rem 0 0;
   transition: 0.5s;
   cursor: pointer;
@@ -256,22 +270,21 @@
   font-size: 1.75rem;
   color: var(--white);
   font-weight: 500;
-  text-shadow: 1px 1px 0 var(--lightblue);
   margin: 1.5rem 0;
 }
 .reviewSeparator {
   width: 25%;
   height: 1px;
   background-color: lightgray;
-  margin: 5rem 0 1.5rem 0;
+  margin: 2.5rem 0;
 }
 .donateBanner {
-  width: 60%;
+  width: 75%;
   padding: 2.5rem;
   border-radius: 1rem;
   position: relative;
+  margin: 5rem auto;
   overflow: hidden;
-  margin: 5rem 0 5rem auto;
   background-color: rgba(255, 255, 255, 0.15);
 }
 .donateBanner > img {
@@ -281,15 +294,14 @@
   border-radius: 1rem;
 }
 .donateBanner h1 {
-  font-size: 3.5rem;
+  font-size: 3.75rem;
   color: var(--white);
   font-weight: 500;
-  text-shadow: 2px 2px 0 var(--lightblue);
   margin: 1.5rem 0;
 }
 .donateBanner p {
   font-size: 1.75rem;
-  color: var(--dark);
+  color: var(--black);
   margin: 0 0 1.5rem 0;
 }
 .donateBanner button {
@@ -310,14 +322,20 @@
 .sponsorsGrid {
   width: 100%;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-template-rows: auto;
   grid-gap: 2.5rem;
   margin: 2.5rem 0 0 0;
 }
 .sponsorsGrid img {
   width: 100%;
+  height: 15rem;
   object-fit: contain;
+}
+.sponsorsGrid a {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .signUp {
   width: 100%;
@@ -334,7 +352,7 @@
   position: relative;
   z-index: 10;
   background-color: rgba(255, 255, 255, 0.15);
-  padding: 2.5rem;
+  padding: 1.75rem 2.5rem;
   border-radius: 1.5rem;
 }
 .signUp img {
@@ -349,10 +367,9 @@
   transform: scale(1.1);
 }
 .signupTextDetails h1 {
-  font-size: 3.5rem;
+  font-size: 3.75rem;
   color: var(--white);
   font-weight: 500;
-  text-shadow: 2px 2px 0 var(--lightblue);
 }
 .inputGrid {
   width: 100%;
@@ -404,7 +421,68 @@
   max-height: 15rem;
   margin: 0 0 1.5rem 0;
 }
-
+.osSection {
+  width: 100%;
+  height: 100vh;
+  position: relative;
+}
+.osContainer {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.25);
+  z-index: 1000;
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
+}
+.osContainerGrid {
+  padding: 7.5rem 2.5rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: auto;
+  grid-gap: 5rem;
+  max-width: 1250px;
+  margin: 0 auto;
+}
+.osGridBox {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: flex-start;
+  background-color: rgba(255, 255, 255, 0.15);
+  padding: 5rem 2.5rem;
+  border-radius: 1.5rem;
+  backdrop-filter: blur(5px);
+}
+.osGridBox main {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+.osGridBox img {
+  width: 7.5rem;
+  object-fit: contain;
+}
+.osGridBox h3 {
+  font-size: 3.75rem;
+  color: var(--white);
+  font-weight: 500;
+  text-align: center;
+  margin: 1.5rem 0;
+}
+.osGridBox h4 {
+  font-size: 2rem;
+  color: var(--white);
+  font-weight: 400;
+  text-align: center;
+}
 @media screen and (max-width: 1250px) {
   .heroContent h1 {
     font-size: 6.5rem;
@@ -413,6 +491,45 @@
 @media screen and (max-width: 1000px) {
   .heroContent h1 {
     font-size: 5rem;
+  }
+  .osContainer {
+    align-items: center;
+  }
+  .osGridBox {
+    padding: 1.5rem;
+    border-radius: 1rem;
+  }
+  .osGridBox h3 {
+    font-size: 2.75rem;
+    margin: 0 0 0 1.5rem;
+  }
+  .osGridBox h4 {
+    font-size: 1.75rem;
+    text-align: start;
+  }
+  .joinMovementTextDetails p {
+    font-size: 1.75rem;
+  }
+  .osContainerGrid {
+    grid-template-columns: 1fr 1fr;
+    padding:  2.5rem;
+    grid-gap: 2.5rem;
+  }
+  .osGridBox img {
+    width: 4rem;
+    object-fit: contain;
+  }
+  .osGridBox main {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    justify-content: flex-start;
+    margin: 0 0 1.5rem 0;
+  }
+  .heroSection {
+    margin: -6.5rem 0 0 0 !important;
+    padding: 6.5rem 0 0 0 !important;
   }
   .sponsorsGrid {
     grid-template-columns: 1fr 1fr;
@@ -433,7 +550,7 @@
     width: 100%;
   }
   .joinMovementTextDetails h1 {
-    font-size: 2.25rem;
+    font-size: 2.75rem;
   }
   .joinMovementTextDetails img {
     height: 15rem;
@@ -442,10 +559,14 @@
     margin: 2.5rem 0 0 0;
   }
   .reviewBannerDetails h1 {
-    font-size: 2.25rem;
+    font-size: 2.75rem;
+  }
+
+  .donateBanner h1 {
+    font-size: 2.75rem;
   }
   .reviewBannerDetails h1.sponsorsP {
-    font-size: 2.25rem;
+    font-size: 2.75rem;
   }
   .donateBanner {
     width: 100%;
@@ -458,9 +579,11 @@
   }
   .signupTextDetails {
     width: 100%;
+    padding: 1.5rem;
+    border-radius: 0.75rem;
   }
   .signupTextDetails h1 {
-    font-size: 2.25rem;
+    font-size: 2.75rem;
   }
   .inputGrid {
     grid-template-columns: 1fr;
@@ -472,22 +595,30 @@
 }
 @media screen and (max-width: 700px) {
   .heroContent h1 {
-    font-size: 3.5rem;
+    font-size: 3.75rem;
+  }
+  .osContainerGrid {
+    grid-template-columns:  1fr;
   }
 }
 @media screen and (max-width: 600px) {
   .heroContent h1 {
     font-size: 2.75rem;
   }
+  .heroContent h2 {
+    font-size: 2.75rem;
+    top: 50%;
+  }
 
   .donateBanner h1 {
-    font-size: 2.25rem;
+    font-size: 2.75rem;
   }
   .sponsorsGrid {
-    grid-template-columns: 1fr;
+    grid-template-columns: 1fr 1fr;
   }
   .sponsorsGrid img {
-    width: 75%;
+    width: 100%;
+    height: 7.5rem;
     object-fit: contain;
     margin: 0 auto;
   }
